--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cardmena-offers",
+  "name": "price-offer",
   "private": true,
   "version": "0.1.0",
   "description": "A Strapi application",
@@ -10,21 +10,26 @@
     "strapi": "strapi"
   },
   "dependencies": {
+    "@strapi/design-system": "^1.7.9",
+    "@strapi/icons": "^1.7.9",
     "@strapi/plugin-i18n": "4.10.7",
     "@strapi/plugin-users-permissions": "4.10.7",
     "@strapi/strapi": "4.10.7",
-    "aws-s3": "^2.0.5",
-    "better-sqlite3": "8.0.1"
+    "axios": "^1.4.0",
+    "better-sqlite3": "8.0.1",
+    "pg": "^8.11.0",
+    "pg-connection-string": "^2.6.0",
+    "strapi-plugin-encryptable-field": "^1.1.3",
+    "strapi-plugin-preview-button": "^1.1.3"
   },
   "author": {
     "name": "A Strapi developer"
   },
   "strapi": {
-    "uuid": "de82d2d0-e584-436c-af1c-2eb837ae3eaf"
+    "uuid": "2d5510fb-8b6d-4bae-993c-e478977aee6e"
   },
   "engines": {
-    "node": ">=14.19.1 <=18.x.x",
-    "npm": ">=6.0.0"
+    "node": "18.x"
   },
   "license": "MIT"
 }
