--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@strapi/icons": "^1.7.9",
     "@strapi/plugin-i18n": "4.10.7",
     "@strapi/plugin-users-permissions": "4.10.7",
+    "@strapi/provider-upload-aws-s3": "^4.10.7",
     "@strapi/strapi": "4.10.7",
     "axios": "^1.4.0",
     "better-sqlite3": "8.0.1",
