--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "strapi": "strapi"
   },
   "dependencies": {
+    "@bn-digital/strapi-plugin-field-uuid": "^1.2.12",
     "@strapi/design-system": "^1.7.9",
     "@strapi/icons": "^1.7.9",
     "@strapi/plugin-i18n": "4.10.7",
