--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "better-sqlite3": "8.0.1",
     "pg": "^8.11.0",
     "pg-connection-string": "^2.6.0",
+    "strapi-auto-uuid": "^0.0.7",
     "strapi-plugin-encryptable-field": "^1.1.3",
     "strapi-plugin-preview-button": "^1.1.3"
   },
