--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "pg-connection-string": "^2.6.0",
     "strapi-auto-uuid": "^0.0.7",
     "strapi-plugin-encryptable-field": "^1.1.3",
-    "strapi-plugin-preview-button": "^1.1.3"
+    "strapi-plugin-preview-button": "^1.1.3",
+    "strapi-utils": "^3.6.11"
   },
   "author": {
     "name": "A Strapi developer"
